--- a/src/forms/select/_select.scss
+++ b/src/forms/select/_select.scss
@@ -5,7 +5,7 @@
 .#{$pl_prefix}select {
     -webkit-appearance: none;
     -moz-appearance: none;
-    background-color: transparent;
+    background-color: $color__white;
     border-radius: 0;
     border: 0;
     bottom: 0;
